hphp/test/zend/good/zend/objects_012.php.exp
HipHop Fatal error: bar cannot implement foo - it is not an interface in hphp/test/zend/good/zend/objects_012.php on line 6
